@@ -880,7 +880,7 @@ server = function(input, output, session) {
                               nc = 100,
                               formants = myPars$formants,
                               formantDep = input$formantDep,
-                              rolloffLip = input$rolloffLip,
+                              lipRad = input$lipRad,
                               mouthAnchors = myPars$mouthAnchors,
                               vocalTract = vocalTract(),
                               temperature = input$temperature,
@@ -896,7 +896,7 @@ server = function(input, output, session) {
                           nc = 100,
                           formants = myPars$formants,
                           formantDep = input$formantDep,
-                          rolloffLip = input$rolloffLip,
+                          lipRad = input$lipRad,
                           mouthAnchors = myPars$mouthAnchors,
                           vocalTract = vocalTract(),
                           temperature = input$temperature,
@@ -969,7 +969,7 @@ server = function(input, output, session) {
                                 nc = 100,
                                 formants = myPars$formantsNoise,
                                 formantDep = input$formantDep,
-                                rolloffLip = input$rolloffLip,
+                                lipRad = input$lipRad,
                                 mouthAnchors = myPars$mouthAnchors,
                                 vocalTract = input$vocalTract,
                                 temperature = input$temperature,
@@ -985,7 +985,7 @@ server = function(input, output, session) {
                             nc = 100,
                             formants = myPars$formantsNoise,
                             formantDep = input$formantDep,
-                            rolloffLip = input$rolloffLip,
+                            lipRad = input$lipRad,
                             mouthAnchors = myPars$mouthAnchors,
                             vocalTract = input$vocalTract,
                             temperature = input$temperature,
@@ -1049,8 +1049,8 @@ server = function(input, output, session) {
       rolloffParab = input$rolloffParab,
       rolloffParabHarm = input$rolloffParabHarm,
       rolloffKHz = input$rolloffKHz,
-      rolloffLip = input$rolloffLip,
-      rolloffNose = input$rolloffNose,
+      lipRad = input$lipRad,
+      noseRad = input$noseRad,
       mouthOpenThres = input$mouthOpenThres,
       formants = myPars$formants,
       formantDep = input$formantDep,
