@@ -240,10 +240,10 @@ ui = fluidPage(
                                                                         shinyBS:::bsPopover(id='vocalTract', title=NULL, content='Affects default formant dispersion at temperature>0', placement="right", trigger="hover"),
                                                                         sliderInput('formantDepStoch', 'Added formants, dB', value=permittedValues['formantDepStoch','default'], min=permittedValues['formantDepStoch', 'low'], max=permittedValues['formantDepStoch', 'high'], step=permittedValues['formantDepStoch','step']),
                                                                         shinyBS:::bsPopover(id='formantDepStoch', title=NULL, content='Amplitude of extra formants added on top of user-specified ones based on the length of vocal tract', placement="right", trigger="hover"),
-                                                                        sliderInput('rolloffLip', 'Lip radiation, dB/oct', value=permittedValues['rolloffLip','default'], min=permittedValues['rolloffLip', 'low'], max=permittedValues['rolloffLip', 'high'], step=permittedValues['rolloffLip','step']),
-                                                                        shinyBS:::bsPopover(id='rolloffLip', title=NULL, content='Rolloff due to lip radiation', placement="right", trigger="hover"),
-                                                                        sliderInput('rolloffNose', 'Nose radiation, dB/oct', value=permittedValues['rolloffNose','default'], min=permittedValues['rolloffNose', 'low'], max=permittedValues['rolloffNose', 'high'], step=permittedValues['rolloffNose','step']),
-                                                                        shinyBS:::bsPopover(id='rolloffNose', title=NULL, content='Rolloff due to nose radiation: added instead of lip radiation when the mouth is closed', placement="right", trigger="hover")
+                                                                        sliderInput('lipRad', 'Lip radiation, dB/oct', value=permittedValues['lipRad','default'], min=permittedValues['lipRad', 'low'], max=permittedValues['lipRad', 'high'], step=permittedValues['lipRad','step']),
+                                                                        shinyBS:::bsPopover(id='lipRad', title=NULL, content='Rolloff due to lip radiation', placement="right", trigger="hover"),
+                                                                        sliderInput('noseRad', 'Nose radiation, dB/oct', value=permittedValues['noseRad','default'], min=permittedValues['noseRad', 'low'], max=permittedValues['noseRad', 'high'], step=permittedValues['noseRad','step']),
+                                                                        shinyBS:::bsPopover(id='noseRad', title=NULL, content='Rolloff due to nose radiation: added instead of lip radiation when the mouth is closed', placement="right", trigger="hover")
                                                ), width=6
                                              ),
                                              mainPanel(
