@@ -13,10 +13,15 @@ getBandwidth(f)
 Internal soundgen function.
 }
 \details{
-Calculates formant bandwidth as a function of formant frequencies using a modified version of TMF-63 formula. Namely, above 500 Hz it follows the original formula Tappert, Martony, and Fant (TMF)-1963, and below 500 Hz it applies a correction to allow for energy losses at low frequencies. See Khodai & Joopari (2002), "Comparison of formulae for estimating formant bandwidth".
+Calculates formant bandwidth as a function of formant frequencies using a
+modified version of TMF-63 formula. Namely, above 500 Hz it follows the
+original formula from Tappert, Martony, and Fant (TMF)-1963, and below 500 Hz
+it applies a correction to allow for energy losses at low frequencies. See
+Khodai-Joopari & Clermont (2002), "Comparison of formulae for estimating
+formant bandwidths".
 }
 \examples{
 f = 1:5000
-plot(f, getBandwidth(f), type = 'l',
+plot(f, soundgen:::getBandwidth(f), type = 'l',
   xlab = 'Formant frequency, Hz', ylab = 'Estimated bandwidth, Hz')
 }
