@@ -9,11 +9,13 @@ MAJOR
   * Back-compatibility in program syntax is preserved. However, because of major changes in the core generation algorithm, the presets from version 1.0.0 will no longer generate the same sounds as before. The vignette on sound generation is updated to explain these changes in detail, and the preset library is updated accordingly.
 
 MINOR
-  * Support for shorthand specification of formants with default amplitudes and bandwidths, e.g. "formants = list(f1 = 800, f2 = c(1500, 2200))", and support for shorthand specification of all anchors with values only in presets and other input to soundgen_app. The expanded format from soundgen 1.0.0 is also supported.
+  * Support for shorthand specification of formants with default amplitudes and bandwidths, e.g. "formants = c(500, 1500, 2500)" or "formants = list(f1 = 800, f2 = c(1500, 2200))".
+  * Support for shorthand specification of all anchors in presets and other input to soundgen_app, e.g. "mouthAnchors = c(0, 0, .3, .5)". The expanded format from soundgen 1.0.0 is also supported.
   * Vectorized rolloff and amplitude modulation parameters, allowing them to change dynamically within a vocalization (command-line only; currently not implemented in the Shiny app).
   * Additional components in tempEffects offering more control over stochastic behavior of soundgen() (command-line only).
+  * Separate radiation functions for the lips and the nose (when the mouth is closed). The corresponding soundeng() arguments are lipRad (replacing rolloffLip) and noseRad.
   * Minor debugging and extended capabilities in soundgen_app(), e.g. preview of formant filter, better intergration of spectrogram and spectrum output plots, a simple way to remove the voiced component, etc.
-  * Debugging elsewhere, notably dB conversion, timing of unvoiced segments in polysyllabic vocalizations in soundgen(), ...
+  * Minor debugging elsewhere, notably dB conversion, timing of unvoiced segments in polysyllabic vocalizations in soundgen(), ...
 
 NEW FUNCTIONS:
   * flatEnv(): normalizes amplitude envelope dynamically, i.e., keeping loudness constant throughout the sound
